--- a/package.json
+++ b/package.json
@@ -33,10 +33,6 @@
   },
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
-    "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.2",
-    "get-starknet-core": "^3.3.0",
-    "postcss": "^8.4.38",
-    "starknet": "^5.24.3"
+    "postcss": "^8.4.38"
   }
 }
